# x86-vga-helloworld

./: .gitignore  CMakeLists.txt  README.md  bootstrap.s  build.ninja  build.py  hello.s  init.s  old-init.c
dbg/: build.sh  generate-sym.sh  run.sh
grub/: generate_iso.sh  grub.cfg
src/: bootstrap.asm
src/kernel/: init.s
src/shell/: collect.sh  deepclean.sh  link.sh
